styles.css
/* ... */
h1,
h2 {
  font-size: clamp(2rem, 4vw, 3.5rem);
}

h1 {
  font-weight: 700;
}


h3 {
  font-size: clamp(1.8rem, 3.5vw, 2.8rem);
}

p {
  color: var(--text);
  line-height: 1.8;
  font-size: clamp(1rem, 2vw, 1.3rem);
}

a {
  text-decoration: none;
}

main {
  background-color: var(--surface);
  overflow-x: hidden;
}

/* ==========================================================
   HEADER
   ========================================================== */

header {
  min-height: 120px;
  position: sticky;
  /* sticky header stays on top while scrolling */
  top: 0;
  background-color: var(--bg);
  z-index: 100;
  padding-block: clamp(1rem, 1.8vw, 2.5rem);
  padding-right: clamp(0.8rem, 2vw, 4rem);
  padding-left: clamp(1rem, 3vw, 5rem);
}

header ul,
header #language-switch {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

header ul li a,
header ul li #language-switch {
  display: block;
  color: var(--text-muted);
  padding: 0.8rem 0.8rem;
  border-bottom: 2px solid transparent;
  transition: border-color 0.2s ease;
}

header ul li a:hover {
  background-color: transparent;
  border-bottom-color: var(--surface-hover);
}

ul li a.active {
  background-color: transparent;
  border-bottom-color: var(--surface-active);
}

@media (max-width: 767px) {
  header {
    min-height: 83px;
  }
}

/* ==========================================================
   Dark-Mode Button
   ========================================================== */

.theme-switch {
  position: absolute;
  left: clamp(1rem, 3vw, 5rem);
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  display: flex;
  align-items: center;
}

.theme-switch input {
  opacity: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.theme-track {
  --thumb-size: 1.8rem;
  --track-padding: 0.3rem;

  width: calc(var(--thumb-size) * 2 + var(--track-padding) * 3);
  height: calc(var(--thumb-size) + var(--track-padding) * 2);
  padding: var(--track-padding);

  background: var(--surface);
  border: 1px solid var(--border-muted);
  border-radius: 999px;
  display: flex;
  align-items: center;
  transition: background 0.3s ease;
}

.theme-thumb {
  width: var(--thumb-size);
  height: var(--thumb-size);
  background: var(--surface-hover);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: calc(var(--thumb-size) * 0.7);
  line-height: 1;
  transition: transform 0.3s ease;
}

.theme-switch:hover .theme-track {
  background: var(--surface-active);
}

.theme-switch input:checked~.theme-track {
  background: var(--decor-secondary);
  border-color: var(--decor-secondary);
}

.theme-switch input:checked~.theme-track .theme-thumb {
  transform: translateX(calc(var(--thumb-size) + var(--track-padding)));
}

.theme-switch input:focus-visible~.theme-track {
  outline: 2px solid var(--accent-soft);
  outline-offset: 3px;
}

.theme-switch:hover input:checked~.theme-track {
  background: var(--decor-primary);
  border-color: var(--decor-primary);
}


@media (max-width: 767px) {
  .theme-switch {
    position: static;
    transform: none;
    padding: 1.5rem 0.8rem;
  }
}

/* ==========================================================
   Language Button
   ========================================================== */

.lang-switch {
  background: transparent;
  border: none;
  cursor: pointer;
  font-size: 1rem;
}

.track {
  position: relative;
  display: flex;
  width: 8rem;

  border-radius: 999px;
  background: var(--surface);
  border: 1px solid var(--border-muted);
}

.option {
  flex: 1;
  text-align: center;
  padding: 0.6rem 0;
  z-index: 2;

  color: var(--text);
  transition: color 0.2s ease;
}

.indicator {
  position: absolute;
  top: 0;
  left: 0;

  width: 50%;
  height: 100%;

  background: var(--surface-hover);
  border-radius: 999px;

  transition: left 0.3s ease;
}

/* DE activ */
.lang-switch.de .indicator {
  left: 50%;
}

.track:hover {
  background: var(--surface-active);
}

/* ==========================================================
   Hamburger Icon / Button
   ========================================================== */

#menu-toggle {
  display: none;
  flex-direction: column;
  gap: 5px;
  background: none;
  border: none;
  cursor: pointer;
  padding: 1rem;
  margin-left: auto;
}

/* hamburger-button stripes */
.bar {
  display: block;
  width: 25px;
  height: 3px;
  background-color: var(--text-muted);
  border-radius: 3px;
  transition:
    transform 0.3s ease,
    opacity 0.3s ease;
}

/* transforms three bars into an X when menu is open */
#menu-toggle.open .bar:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
}

#menu-toggle.open .bar:nth-child(2) {
  opacity: 0;
}

#menu-toggle.open .bar:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
}

/* navigation (mobile) */
@media (max-width: 767px) {
  #menu-toggle {
    display: flex;
  }

  #navigation-list {
    display: none;
    flex-direction: column;
    width: 100%;
  }

  #navigation-list.open {
    display: flex;
  }
}

.dropdown-gallery a {
  font-size: 0.9rem;
  opacity: 0.8;
}

@media (max-width: 767px) {

  .navigation-list {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .navigation-list>li {
    text-align: center;
  }
}

/* ==========================================================
   Dropdown-Gallery
   ========================================================== */

.has-dropdown-gallery {
  position: relative;
}

/* dropdown hidden by default */
.dropdown-gallery {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: var(--bg);
  min-width: 200px;
  z-index: 100;
  box-shadow: var(--shadow-sm);
  padding: 8px 0;
}

/* show on hover */
.has-dropdown-gallery:hover .dropdown-gallery {
  display: flex;
  flex-direction: column;
}

/* dropdown links */
.dropdown-gallery a {
  padding: 0.75rem 1rem;
  color: var(--text-muted);
  display: block;
}
/* ... */

